public/css/styles.css
/* ================== CUSTOM CSS ================== */

body {
  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  font-size: 13px;
  color: #444444;
  margin: 0 auto;
  text-align: center;
}

h1 {
  font-size: 20px;
  line-height: 70px;
  font-weight: 500;
}

h2 {
  font-size: 20px;
  font-weight: 500;
}

a {
  font-size: 13px;
  color: #444444;
  text-decoration: none;
}

a, a:hover, a:active, a:visited {
    text-decoration:none;
}

.sticky {
  z-index: 9393939;
}

.fa.fa-heart-o {
  margin-left: 2px
}

.main-content {
  padding-left: 60px;
  padding-right: 60px;
  top: -60px;
  position: relative;
}
/* ================== PRODUCT LIST CSS ================== */

.product-list {
  margin-top: 20px;
  list-style: none;
}

.product-list-masonry {
  margin: 0 auto;
}

.bottom-stick .avatar-link {
  display: inline-block;
  position: absolute;
  bottom: 0;
  right: 10%;
  color: #444444;
}

.avatar-info {
  height: 60px;
}

.avatar-info .avatar-link {
  width: 78%;
  float: left;
}

/* ================== PRODUCT ITEM SMALL CSS ================== */


.product-item-small {
  border: 1px solid #f2f2f2;
  border-radius: 4px;
  /*height: 480px;*/
  width: 300px;
  display: inline-block;
  margin-top: 15px;
  margin-left: 15px;
  box-shadow: 4px 4px 3px #f2f2f2;
}

.product-item-small-info .product-item-name {
  font-size: 19px;
  text-align: center;
}

.product-item-small:hover,
.product-item-medium:hover {
  background-color: #f2f2f2;
  cursor: pointer;
}

.product-item-small .tags {
  text-align: center;
  margin: 18px auto 0 auto;
}

.product-item-small-content {
  width: 100%;
  height: 100%;
}

.product-item-small .tags > a {
  font-weight: 300;
  font-size: 16px;
  padding: 3px;
}

.product-item-small .product-item-small-info {
  bottom: 0;
  margin-top: 20px;
  width: 100%;
}

.product-item-small .product-item-small-info h2 {
  text-align: center;
  color: #5e9aee;
}

.product-item-small .product-item-small-info p {
  color: #999999;
  font-size: 14px;
  padding: 0 23px 3px 23px;
}

.product-item-small .product-item-media-small {
  display: block;
  height: 280px;
  padding: 20px;
}

.product-item-small .product-item-media-small img {
  zoom: 2;
  display: block;
  margin: 0 auto;

  height: auto;
  max-height: 100%;

  width: auto;
  max-width: 100%;
  clear: both;

  padding: auto;
}

.small-avatar {
  width: 45px;
  height: 45px;
  border-radius: 50%;
  float: left;
  margin-bottom: 5px;
}

.small-avatar:hover,
.medium-avatar:hover {
  background: #999999;
  opacity: .9;
}

.small-avatar-name,
.medium-avatar-name {
  float: left;
  margin: 10px auto;
  text-align: left;
}

.small-avatar-name:hover,
.medium-avatar-name:hover {
  color: black !important;
  cursor: pointer;
}

/* ================== PRODUCT ITEM MEDIUM HORIZONTAL CSS ================== */

.product-item-medium {
  border: 1px solid #f2f2f2;
  border-radius: 4px;
  height: 550px;
  width: 615px;
  display: inline-block;
  margin-top: 15px;
  margin-left: 15px;
  box-shadow: 4px 4px 3px #f2f2f2;
}

.product-item-medium .tags {
  text-align: center;
  margin: 18px auto 0 auto;
}

.product-item-medium .tags > a {
  font-weight: 300;
  font-size: 19px !important;
  padding: 8px !important;
}


.product-item-medium .product-item-media-medium img {
 zoom: 2;
 display: inline-block;
 margin: 0 auto;

 height: auto;
 max-height: 100%;

 width: auto;
 max-width: 100%;
 clear: none;

 text-align: center;
 padding: auto;

 border: 1px solid #f2f2f2;
}

.product-item-medium .product-item-media-medium {
  display: block;
  height: 300px;
  padding: 10px;
  margin-bottom: 20px;
}

.product-item-medium .product-item-medium-info {
  position: absolute;
  text-align: center !important;
  bottom: 0;
  margin-top: 20px;
  width: 100%;
}

.product-item-medium .product-item-medium-info h2 {
  text-align: center !important;
  font-size: 21px;
  color: #5e9aee;

}

.product-item-medium .product-item-medium-info p {
  text-align: center !important;
  color: #999999;
  font-size: 14px;
  padding: 0 23px 3px 23px;
}

.medium-avatar {
  width: 55px;
  height: 55px;
  border-radius: 50%;
  float: left;
  margin-bottom: 5px;
}

/* ================== UPVOTE BUTTON CSS ================== */


.upvote-button {
  width: 35px;
  font-size: 20px;
  border-radius: 4px;
  display: block;
  position: absolute;
  right: 10%;
  bottom: 0;
  font-weight: 300;
  text-align: center;
  color: #5e9aee !important;
}

.upvote-button.upvote-button-small {
  margin: 5px;
  padding: 4px;
}

.upvote-button:hover {
  font-weight: 400;
  color: black !important;
  text-decoration: none;
}

.upvote-button:focus {
  text-decoration: none;
}

.upvote-button.active {
  text-decoration: none;
  font-weight: 400;
  color: black !important;
}

.upvote-button > * {
  display: block;
  padding: 3px;
}

/*------------------------------ NAVBAR ------------------------------*/
.navbar {
  background-color: white;
  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.2);
}

.logo {
  height: 75px;
  width: 75px;
  border-radius: 25%;
  float: left;
  margin: 10px 20px;
}

.login-btn {
	padding: 10px;
  margin: 20px 20px;
	color: #999999;
	font-weight: 500;
	font-size: 17px;
	display: block;
}

.login-btn:hover {
	color: #5e9aee;
}

.navbar {
	text-align: center;
	padding: 10px 10px 5px;
}

.navbar .search-section .product-search {
	background-color: #f2f2f2;
	color: #999999;
	padding: 12px 12px;
	border: 1px solid #f2f2f2;
	border-radius: 4px;
	font-size: 11px;
	font-weight: 500;
	height: 50px;
	width: 70%;
	outline: 0;
  margin: 20px 0;
}


.navbar .right-side {
	float: right;
}

.navbar .right-side .profile-menu {
  margin: 13px 20px;
}

.navbar .right-side .profile-menu img {
  height: 60px;
  width: 60px;
  border-radius: 50%;
}

/*------------------------------ POPUP ------------------------------*/
.popup .popup-wrap {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-color: white;
	opacity: 0.97;
}

.popup .popup-wrap img {
	position: fixed;
	top: 40px;
	left: 40px;
	cursor: pointer;
}

.popup .popup-content {
	position: fixed;
}

button {
	border-radius: 20px;
	padding: 8px 20px;
	font-size: 13px;
	font-weight: 500;
	outline: 0;
	border: 0;
}

button:hover {
	cursor: pointer;
}

.popup-content.login-popup {
	text-align: center;
	width: 400px;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
}

.facebook-btn {
	color: white;
	background-color: #3b5998;
	margin: 20px;
}

/* POST POPUP */
.post-popup {
	width: 90%;
	right: 0;
	top: 0;
	background-color: white;
}

.post-popup .post-header {
	background: #5e9aee;
	color: white;
	text-align: center;
	padding: 20px;
	height: 20%;
}

.post-popup .post-footer {
	background: #f2f2f2;
	text-align: center;
	padding: 20px 0;
	height: 10%;
}

.post-popup > section {
	font-size: 14px;
	border: 1px solid #f2f2f2;
	padding: 20px 0;
	height: 70%;
	color: #928B8B;
}

.post-popup > section table {
	width: 100%;
}

.post-popup > section table tr td {
	padding: 30px;
}

.post-popup > section table tr td:first-child {
	width: 20%;
}

.post-popup > section table tr td:last-child {
	width: 80%;
	border-bottom: 1px solid #f2f2f2;
}

.post-popup > section table input {
	border: 0;
	outline: 0;
	font-size: 13px;
	width: 100%;
}

/* PRODUCT POPUP */

.product-popup {
	width: 80%;
	height: 100%;
	right: 0;
	top: 0;
	background-color: white;
	overflow: scroll;
	border-left: 1px solid #f0efef;
}

.product-popup header {
	text-align: center;
	background-color: #5e9aee;
	background-position: 50% 50%;
	background-size: cover;
	background-repeat: no-repeat;
}

.product-popup header .header-shadow {
	background-color: transparent;
	background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
	padding: 45px;
}

.product-popup header .header-shadow > h1 {
	font-size: 40px;
	font-weight: 900;
	color: white;
	line-height: 48px;
}

.product-popup header .header-shadow > p {
	line-height: 55px;
	font-size: 18px;
	color: #cdd1d3;
}

.product-popup header .header-shadow > section > * {
	display: inline-block;
	vertical-align: middle;
}

.product-popup header .header-shadow > section .getit-btn {
	border-radius: 4px;
	padding: 15px 25px;
	background-color: #5898f1;
	color: white;
}

.product-popup .product-popup-body main .discussion {
	margin: 50px auto;
	width: 80%;
}

.product-popup .product-popup-body main .discussion h2 {
	color: #999;
	padding-bottom: 20px;
}

.product-popup .product-popup-body main .discussion .post-comment {
	margin: 10px 0;
	padding: 20px;
	background-color: #f9f9f9;
	border-radius: 4px;
	display: -webkit-flex;
	display: flex;
	-webkit-align-tems: center;
	align-items: center;
}

.product-popup .product-popup-body main .discussion .post-comment img {
	margin-right: 15px;
}

.product-popup .product-popup-body main .discussion .post-comment input {
	padding: 10px;
	font-size: 15px;
	width: 90%;
	border: 1px solid #f0efef;
}

.comment-list li {
	padding: 20px 0;
}

.comment-list li > * {
	display: inline-block;
	vertical-align: top;
}

.comment-list li > section {
	margin-left: 15px;
}

.comment-list li > section strong {
	font-size: 14px;
	font-weight: 600;
	display: inline-block;
	margin-bottom: 15px;
}

.comment-list li > section p {
	font-size: 14px;
}

/*------------------------------ PROFILE MENU ------------------------------*/
.profile-menu .profile-btn {
  margin-left: 24px;
	opacity: 0.9;
}

img.profile-btn.medium-avatar {
  height: 50px;
  width: 50px;
}

.profile-menu .profile-btn:hover {
	cursor: pointer;
	opacity: 1;
}

.profile-menu .profile-nav {
	position: fixed;
	top: 55px;
	right: 20px;
	background-color: white;
	border-radius: 4px;
	text-align: left;
}

.profile-menu .profile-nav a {
	display: block;
	width: 140px;
	font-size: 15px;
	line-height: 38px;
	padding: 0 20px;
	color: #bbbbbb;
}

.profile-menu .profile-nav a:hover {
	background-color: #f2f2f2;
	border-radius: 4px;
}

/*------------------------------ POST BUTTON ------------------------------*/
.post-btn-container {
  height: 80px;
  width: 80px;
  margin-left: 36px;
}

.post-btn {
	color: #FFFFF3;
  width: 60px;
  height: 60px;
	background: #3b8686;
  margin: 0 auto;
  display: block;
  border-radius: 50%;
  padding-top: 1px;
  font-size: 36px;
}

.transition-fast {
  -webkit-transition: all .5s ease-in-out;
  -moz-transition: all .5s ease-in-out;
  -o-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;
}

.transition-medium {
  -webkit-transition: all .7s ease-in-out;
  -moz-transition: all .7s ease-in-out;
  -o-transition: all .7s ease-in-out;
  transition: all .7s ease-in-out;
}

.post-btn-desc {
  opacity:0;
  position: relative;
  top: 0px;
  color: #79bd9a;
}

.post-btn:hover {
  text-decoration: none;
  -webkit-transform: rotate(360deg);
  transform: rotate(360deg);
  color: #FFFFF3;
  background-color: #a8dba8;
  cursor: pointer;
}

.post-btn:hover~.post-btn-desc{
    opacity: 1.0;
    top: 5px;
    font-weight:bolder;
}

section.post-section {
  position: inherit;
  right: 50px;
  bottom: 70px;
}

